--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+easy_admin_bundle:
+    resource: '@EasyAdminBundle/Controller/'
+    type: annotation
+    prefix: /admin
+
